--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "cross-env": "^7.0.3",
+    "dotenv-webpack": "^8.1.1",
     "fs-extra": "^10.0.0",
     "jszip": "^3.7.1",
-    "webpack": "^5.61.0",
-    "vanilla-picker": "^2.12.1"
+    "openai": "^4.20.0",
+    "vanilla-picker": "^2.12.1",
+    "webpack": "^5.61.0"
   }
 }
